[package]
name = "domain_verification_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7.5"
trust-dns-resolver = "0.23.2"
lazy_static = "1.4.0"
ic-agent = "0.34.0"
tiny-bip39 = "1.0.0"
secp256k1 = { version = "0.28.2", features = ["hashes"] }
sha2 = "0.10.8"
clap = { version = "4.5.1", features = ["derive"] }
candid = "0.10"
dmailfi_types = { git = "https://github.com/Zedonboy/dmailfi_protocol.git", branch = "main"}
[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]